增加注册修复功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,15 +28,15 @@ jwt.token.head=Bearer
 jwt.route.authentication.path=auth
 jwt.route.authentication.refresh=refresh
 jwt.route.authentication.register=auth/register
-picture.url=http://127.0.0.1:8888/
+picture.url=http://127.0.0.1:8866/
 #数据库连接文件
 # 人脸布控系统数据源
-master.datasource.url=jdbc:mysql://192.168.5.236/via?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+master.datasource.url=jdbc:mysql://127.0.0.1/face?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 master.datasource.username=root
 master.datasource.password=123456
 master.datasource.driverClassName=com.mysql.jdbc.Driver
 # 视频联网平台数据源
-slave.datasource.url=jdbc:mysql://192.168.0.192/ma?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+slave.datasource.url=jdbc:mysql://127.0.0.1/ma?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 slave.datasource.username=root
 slave.datasource.password=123456
 slave.datasource.driverClassName=com.mysql.jdbc.Driver
