--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,13 +31,9 @@ jwt.route.authentication.register=auth/register
 picture.url=http://127.0.0.1:8866/
 #数据库连接文件
 # 人脸布控系统数据源
-<<<<<<< HEAD
 master.datasource.url=jdbc:mysql://127.0.0.1/face?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-=======
-master.datasource.url=jdbc:mysql://192.168.0.226/via?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
->>>>>>> a71b84c2db5fc19fa62d373c86fbedb43928cd84
 master.datasource.username=root
-master.datasource.password=Mysql_123
+master.datasource.password=123456
 master.datasource.driverClassName=com.mysql.jdbc.Driver
 # 视频联网平台数据源
 slave.datasource.url=jdbc:mysql://127.0.0.1/ma?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
